--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,9 @@ dependencies {
     compile group: 'org.seleniumhq.selenium', name: 'selenium-edge-driver', version: '3.4.0'
     // https://mvnrepository.com/artifact/log4j/log4j
     compile group: 'log4j', name: 'log4j', version: '1.2.17'
+    // https://mvnrepository.com/artifact/com.aventstack/extentreports
+compile group: 'com.aventstack', name: 'extentreports', version: '4.0.9'
+    
     
 }
 
